# PiAtHome

./: .gitignore  .pydevproject  Readme.md  Solarmax2.py  SqliteDBManager.py  setup.cfg  setup.py  test.s3db
MyPromExporters/: pyproject.toml
MyPromExporters/mypromexporters/: fioulleclerc_exporter.conf  onewirenet_exporter.conf  solarmax_exporter.py
MyPromExporters/tests/: test_mypromexporters.py
ParseTIC/: prod.txt  teleinfo.py  teleinfo2.py  tic_std1.txt
PiAtHome/: pyproject.toml  setup.py
PiAtHome/conf_prod/: cron_backup  cron_piathome  logging_pysolarmax.conf  storage-schemas.conf
PiAtHome/conf_prod/apache2/: piathome  piathome.conf  piathome_ssl  piathome_ssl.conf
PiAtHome/data/: Solarmax_data2.s3db  Solarmax_rtstats.s3db
PiAtHome/piathome/: ApplicationUsers.py  Charts.py  Charts.wsgi  Charts_Solar.py  Charts_Teleinfo.py  Solarmax_data2.s3db
PiAtHome/piathome/templates/: columns.tpl  layout.tpl
PySolar/: pyproject.toml
PySolar/pysolarmax/: Command.py  DataConverter.py  DbOutput.py  Format.py  Inverter.py  MessageData.py  Request.py  Response.py  ScreenOutput.py  Solarmax.py  SqliteDBManager.py  logging.conf
PySolar/tests/: tcp_server.py  test_command.py  test_converter.py  test_dboutput.py  test_format.py  test_inverter.py  test_main.py  test_message.py  test_request.py  test_response.py
PyTeleinfo/: pyproject.toml  setup.py  teleinfo.py
PyTeleinfo/pyteleinfo/: counter.py  counter_id.py  data_writer.py  errors.py  exporter.py  logging.conf  parsers.py  pyteleinfo.service  serial_management.py  teleinfo.conf  teleinfo.py  teleinfo_store.py
PyTeleinfo/teleinfo/: pyteleinfo.service  teleinfo.py  teleinfo_aggr.py  teleinfo_store.py
PyTeleinfo/tests/: output_061961603414  output_061961603418_tempo  parseTic.py  test_teleinfo.py  test_teleinfo_store.py
conf_prod/: charts.conf  logging_teleinfo.conf  pysolarmax.cron
data/: Teleinfo_data.s3db
docs/: Output.txt  (+1 more)
trunk/: setup.py  (+4 more)
(+107 files in other folders)
