[tool.poetry]
name = "MyPromExporters"
version = "0.1.0"
description = ""
authors = ["bonzai133 <bonzai133@free.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.15.0"
lxml = "^4.9.1"
requests = "^2.28.1"
pyownet = "^0.10.0"
pysolarmax = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
