[tool.poetry]
name = "piathome"
version = "0.1.0"
description = "PiAtHome web site"
authors = ["bonzai133 <bonzai133@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bottle = "^0.12.23"
bottle-sqlite = "^0.2.0"
Beaker = "^1.11.0"
wsgi-request-logger = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
