[tool.poetry]
name = "PySolarmax"
version = "2.0.0"
description = "Retrieve info from Solarmax inverter"
authors = ["bonzai133 <bonzai133@free.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
Solarmax = "pysolarmax.Solarmax:main"
